--- a/blogpostplatform/blog/templates/blog/post-detail.html
+++ b/blogpostplatform/blog/templates/blog/post-detail.html
@@ -10,5 +10,9 @@
     <div>
         {{ post.content }}
     </div>
+
+    {% if user.is_authenticated and user == post.author %}
+        <a href="{% url 'delete_post' post.slug %}" onclick="return confirm('Are you sure you want to delete this post?');">Delete Post</a>
+    {% endif %}
 </body>
 </html>
