--- a/blogpostplatform/blog/templates/blog/post-list.html
+++ b/blogpostplatform/blog/templates/blog/post-list.html
@@ -6,8 +6,16 @@
 </head>
 <body>
     {% if user.is_authenticated %}
-        <div>
+        <div style="display:flex; justify-content:space-between">
             <a href="{% url 'create_post' %}">Create New Post</a>
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit" onclick="return confirm('Are you sure you want to logout?');">Log Out</button>
+            </form>
+        </div>
+    {% else %}
+        <div>
+            <a href="{% url 'login' %}">Login</a>
         </div>
     {% endif %}
 
