--- a/blogpostplatform/blog/templates/blog/post-detail.html
+++ b/blogpostplatform/blog/templates/blog/post-detail.html
@@ -14,5 +14,16 @@
     {% if user.is_authenticated and user == post.author %}
         <a href="{% url 'delete_post' post.slug %}" onclick="return confirm('Are you sure you want to delete this post?');">Delete Post</a>
     {% endif %}
+
+    <hr>
+    <h2>{{ comments.count }} comments</h2>
+
+    {% for comment in comments %}
+        <div>
+            <h4>{{ comment.content }}</h4>
+            <p style="margin-left: 50px;">Posted by {{ comment.author_name }} on {{ comment.date_created }}</p>
+        </div>
+    {% endfor %}
+
 </body>
 </html>
