--- a/blogpostplatform/blog/templates/blog/post-detail.html
+++ b/blogpostplatform/blog/templates/blog/post-detail.html
@@ -7,12 +7,22 @@
 <body>
     <h2>{{ post.title }}</h2>
     <p>Posted by {{ post.author }} on {{ post.date_posted }}</p>
-    <div>
+    <div style="padding:10px">
         {{ post.content }}
     </div>
 
+    <table>
+        <th colspan="2" style="font-size:20px; font-weight:bold">Score: {{ post.vote }}</th>
+        <tr>
+            <td><a href="{% url 'like' post.slug %}"><span style="font-size:20px">+</span> ({{ post.likes }})</a></td>
+            <td><a href="{% url 'dislike' post.slug %}"><span style="font-size:20px">-</span> ({{ post.dislikes }})</a></td>
+        </tr>
+    </table>
+
     {% if user.is_authenticated and user == post.author %}
-        <a href="{% url 'delete_post' post.slug %}" onclick="return confirm('Are you sure you want to delete this post?');">Delete Post</a>
+        <div style="padding:10px; font-weight:bold">
+            <a href="{% url 'delete_post' post.slug %}" onclick="return confirm('Are you sure you want to delete this post?');">Delete Post</a>
+        </div>
     {% endif %}
 
     <hr>
