Add logout button on Post Details screen

--- a/blogpostplatform/blog/templates/blog/post-detail.html
+++ b/blogpostplatform/blog/templates/blog/post-detail.html
@@ -5,7 +5,19 @@
     <title>Post Details</title>
 </head>
 <body>
-    <h2>{{ post.title }}</h2>
+    <div style="display:flex; justify-content:space-between">
+        <h2>{{ post.title }}</h2>
+        {% if user.is_authenticated %}
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit" onclick="return confirm('Are you sure you want to logout?');">Log Out</button>
+            </form>
+        {% else %}
+            <div>
+                <a href="{% url 'login' %}">Login</a>
+            </div>
+        {% endif %}
+    </div>
     <p>Posted by {{ post.author }} on {{ post.date_posted }}</p>
     <div style="padding:10px">
         {{ post.content }}
